--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,22 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    overflow-x: hidden;
+}
+
+h1, h2 , h3 {
+    text-align: center;
+}
+
+h2 {
+    font-size: 38px;
+}
+
 li {
     list-style-type: none;
 }
@@ -30,6 +46,10 @@ button {
 
 section {
     background-color: rgb(245, 245, 245);
+}
+
+#about, #skills {
+    padding: 60px 12px;
 }
 
 #personal-logo {
@@ -196,4 +216,46 @@ nav {
 ABOUT ME 
 
 */
+
+#about {
+    background-color: #ececec;
+}
+
+.about__content {
+    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(1,1fr 1fr);
+    margin-top: 50px;
+}
+
+.about__img {
+    margin: 0 auto;
+}
+
+.about__img img {
+    border-radius: 50%;
+    box-shadow: 0 10px 20px rgb(0, 0, 0 / 50%);
+    height: 350px;
+    width: 350px;
+}
+
+.about__text {
+    width: 75%;
+}
+
+.about__para {
+    font-size: 21px;
+    font-weight: 700;
+    width: 75%;
+}
+
+.btn {
+    background: #63c5da;
+    color: #fff;
+    padding: 0.5rem 1rem;
+    font-size: 1.25em;
+    border-radius: 4px;
+    border: none;
+    margin-top: 12px;
+}
 
