--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ h2 {
     font-size: 38px;
 }
 
+h3 {
+    font-size: 26px;
+    padding: 50px 0 15px;
+}
+
 li {
     list-style-type: none;
 }
@@ -48,7 +53,7 @@ section {
     background-color: rgb(245, 245, 245);
 }
 
-#about, #skills {
+#about, #skills, #projects {
     padding: 60px 12px;
 }
 
@@ -262,3 +267,165 @@ ABOUT ME
     margin-top: 12px;
 }
 
+/* 
+
+Skills 
+
+*/
+
+#skills {
+    position: relative;
+    max-width: 100vw;
+}
+
+.stack__wrapper {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+}
+
+.tech__used, .tech__learned {
+    margin: 0 auto;
+}
+
+.tech__icons {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    justify-items: center;
+}
+    
+.tech__icon {
+    align-items: center;
+    border-radius: 10%;
+    box-shadow: 0 3px 10px -3px rgba(0,0,0,.54);
+    display: flex;
+    font-size: 40px;
+    height: 80px;
+    justify-content: center;
+    margin: 10px;
+    padding: 10px;
+    width: 80px;
+    position: relative;
+}
+ 
+.tech__icon:hover .icon__name {
+    transform: scale(1);
+    transition: all .3s ease 0;
+}
+
+.tech__icon:hover .tech__icon--img {
+    filter: brightness(80%);
+    transform: scale(0.9);
+    transition: all .5s ease 0s;
+}
+
+.tech__icon--img {
+    width: 75%;
+    margin-top: -10px;
+}
+
+
+.icon__name {
+    bottom: 4px;
+    font-size: 13px;
+    font-weight: 700;
+    position: absolute;
+    transform: scale(0);
+    transition: all .5s ease 0s;
+}
+
+/* #skills:before {
+    content: "";
+    position: absolute;
+    width: 520px;
+    height: 520px;
+    left: -260px;
+    border-radius: 50%;
+    z-index: -1;
+    background-color: #ADD8E6; 
+} */
+
+/* 
+
+Projects 
+
+*/
+
+#projects {
+    background-color: #ececec;
+}
+
+.project__wrapper {
+    margin: 0 auto;
+    max-width: 1000px;
+}
+
+.project__section--title {
+    margin-bottom: 50px;
+}
+
+.project__img {
+    width: 100%;
+    transition: all .6s ease;
+}
+
+.project__wrapper  {
+    position: relative;
+    border-radius: 20px;
+    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
+    overflow: hidden;
+}
+
+.project__wrapper:hover .project__description {
+    opacity: 1;
+    transform: translateY(-50%);
+}
+
+.project__wrapper:hover .project__img {
+    transform: scale(1.07);
+    filter: blur(5px);
+}
+
+.project__description {
+    position: absolute;
+    top: 50%;
+    left: 90px;
+    transform: translateY(100%);
+    opacity: 0;
+    transition: opacity 300ms, transform 450ms ease;
+    color: white;
+    max-width: 550px;
+}
+
+.project__wrapper:hover .project__wrapper--bg {
+    opacity: 0.7;
+}
+
+.project__wrapper--bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1c1d25;
+    opacity: 0;
+    transition: all 450ms ease;
+}
+
+.project__description--title {
+    font-size: 40px;
+    text-align: left;
+}
+
+.project__description--sub--title {
+    margin-top: 8px;
+}
+
+.project__description--link {
+    color: white;
+    font-size: 20px;
+    margin-right: 16px;
+}
+
+.project__description--para {
+    margin: 16px 0;
+}
